Update Links + Examples
+ 1113
+ 1111

--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -82,7 +82,7 @@ The Olympia upgrade activates the following Ethereum protocol improvements on Et
 #### Protocol Changes Adopted from Ethereum's London Hard Fork
 
 - [**EIP-1559 – Fee Market Change**](https://eips.ethereum.org/EIPS/eip-1559)  
-  Introduces a new transaction format with a dynamically adjusting `basefee` per block and an optional `priorityFee` (tip) for miners ([fee adjustment formula](https://eips.ethereum.org/EIPS/eip-1559#parameters) based on block gas usage).
+  Introduces a new transaction format with a dynamically adjusting `basefee` per block and an optional `priorityFee` (tip) for miners ([fee adjustment formula](https://eips.ethereum.org/EIPS/eip-1559#specification) based on block gas usage).
 
   - On Ethereum Classic, the `basefee` is **not burned**. Instead, it is redirected to the [Olympia Treasury](https://ecips.ethereumclassic.org/ECIPs/ecip-1112), a decentralized, immutable contract for funding network development.
   - Miner tips (`priorityFee`) remain payable to block producers as direct compensation for inclusion.
@@ -125,8 +125,8 @@ func finalizeBlock(block *Block, state *StateDB) error {
 ##### Pseudocode Notes
 
 - This is illustrative only — the real implementation resides in:
-  - [`miner/block.go`](https://github.com/ethereumclassic/core-geth/blob/master/eth/consensus/ethash/block.go)
-  - `core/state_transition.go`
+  - [`miner/block.go`](https://github.com/ethereumclassic/core-geth/tree/master/miner)
+  - [`core/state_transition.go`](https://github.com/ethereumclassic/core-geth/blob/master/core/state_transition.go)
 - `StateDB` is Core-Geth's execution ledger, used to apply balance changes during mining.
 - This logic is consensus-critical and must match across clients to preserve fork integrity.
 
@@ -187,7 +187,7 @@ Upgrading ensures ETC remains standards-aligned and future-proof for both dApp a
 
 ### Modular Activation
 
-ECIP-1111 introduces the redirection of `BASEFEE` revenue to an on-chain treasury but does **not** require immediate activation of downstream governance components — including [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113) (Olympia DAO) or [ECIP-1114](https://ecips.ethereumclassic.org/ECIPs/ecip-1114) (legal execution interface).
+ECIP-1111 introduces the redirection of `BASEFEE` revenue to an on-chain treasury but does **not** require immediate activation of downstream governance components — including [ECIP-1113](https://ecips.ethereumclassic.org/ECIPs/ecip-1113) (Olympia DAO) or [ECIP-1114](https://ecips.ethereumclassic.org/ECIPs/ecip-1114) (Ethereum Classic Funding Proposal Process).
 
 Instead, `BASEFEE` is redirected to a passive, non-upgradable treasury contract defined in [ECIP-1112](https://ecips.ethereumclassic.org/ECIPs/ecip-1112). This treasury:
 - **Accumulates protocol revenue** without disbursing funds
@@ -239,7 +239,7 @@ This ECIP strictly introduces the **on-chain redirection of BASEFEE** and the ac
 Implementation of the:
 - [Olympia Treasury](https://ecips.ethereumclassic.org/ECIPs/ecip-1112)
 - [Olympia DAO governance](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)
-- [Legal execution layer](https://ecips.ethereumclassic.org/ECIPs/ecip-1114)
+- [Ethereum Classic Funding Proposal Process](https://ecips.ethereumclassic.org/ECIPs/ecip-1114)
 
 ...is defined in separate proposals and may proceed **independently**.
 
