--- a/_specs/ecip-1113.md
+++ b/_specs/ecip-1113.md
@@ -295,10 +295,18 @@ Olympia DAO draws from established governance systems and treasury frameworks ad
 - **Polygon CDK**  
   Offers a sovereign rollup framework that integrates EIP-1559 fee burning and optional DAO-managed treasuries. Supports native DAO plug-ins and treasury hooks for sovereign rollups.
 
-- **OP Stack (Base, Optimism)**  
+- **OP Stack (Base, Optimism L2)**  
   Implements sequencer fee sharing with optional L2 governance control. Does not natively redirect `BASEFEE` to DAO treasuries but allows custom fee-split mechanisms.
 
+- **Arbitrum**  
+  DAO-governed treasury with an on-chain AIP process; funds ecosystem grants. Treasury is capitalized from initial token allocation and sequencer revenue, not `BASEFEE` redirection.
+
+- **Optimism (Retroactive Public Goods Funding)**  
+  Bicameral governance model (Token House + Citizens’ House) providing retroactive funding for high-impact public goods. Treasury inflows come from token supply allocation and sequencer revenue, not `BASEFEE`.
+
 These implementations confirm that on-chain governance of protocol-level revenue is a scalable and effective model for funding decentralized ecosystems.
+
+> *Note*: The L2 examples above (Arbitrum, Optimism, Mantle, OP Stack chains) fund treasuries via sequencer revenue or token allocations rather than `BASEFEE` redirection. They are included as governance/treasury design precedents relevant to ETC.
 
 #### Governance Architecture References
 
@@ -315,6 +323,21 @@ Olympia DAO also builds upon open-source, audited governance frameworks that hav
 
 - **Aave DAO Governance Framework**  
   Implements Aave Improvement Proposals (AIPs) via a robust system of timelocks, delegated voting, and cross-chain relays. Manages one of the largest decentralized treasuries on Ethereum.
+
+- **Arbitrum DAO (AIP Framework)**  
+  Large-scale, on-chain governance managing one of the largest L2 treasuries. Uses an AIP (Arbitrum Improvement Proposal) lifecycle with community voting, Security Council oversight, and timelocked execution.
+
+- **OlympusDAO Governance**  
+  A DeFi-native treasury governance system coordinating multi-billion-dollar on-chain assets. Uses forum discussion, community signaling, and binding on-chain votes to manage protocol parameters, treasury allocations, and strategic initiatives.
+
+- **ENS DAO Governance**  
+  Controls the Ethereum Name Service protocol and treasury through on-chain proposals, delegated token voting, and a transparent proposal review process. Known for community accessibility and long-term stewardship focus.
+
+- **MakerDAO (MIPs Framework)**  
+  Manages the Dai stablecoin system and multi-billion-dollar reserves through Maker Improvement Proposals (MIPs), weekly governance cycles, and risk parameter management. Combines on-chain execution with rigorous off-chain domain team review.
+
+- **Gitcoin DAO Governance**  
+  Specializes in funding open-source software and digital public goods. Operates quadratic funding and direct grants rounds via community voting, with Gitcoin Passport providing sybil-resistance. Integrates off-chain deliberation with on-chain treasury disbursement.
 
 #### Application to Ethereum Classic
 
@@ -336,7 +359,7 @@ The Olympia DAO will be implemented as a modular suite of smart contracts deploy
 The core logic for proposal lifecycle management — including submission, voting, and execution — SHALL be implemented using modular and audited frameworks, including:
 
 - [OpenZeppelin Governor](https://github.com/OpenZeppelin/openzeppelin-contracts/tree/master/contracts/governance)
-- [Compound Governor Bravo](https://github.com/compound-finance/governance)
+- [Compound Governor Bravo](https://github.com/compound-finance/compound-protocol/tree/master/contracts/Governance)
 
 Customizable parameters SHALL include:
 
