--- a/_specs/ecip-1112.md
+++ b/_specs/ecip-1112.md
@@ -244,18 +244,36 @@ The Treasury contract is a cornerstone of Ethereum Classic’s transition to sus
 
 #### Ecosystem Precedents
 
-Other EVM-based networks have adopted similar basefee redirection models to fund public goods:
+Other EVM-based networks have adopted similar protocol-level fee redirection models to fund public goods. These implementations demonstrate that **routing BASEFEE or sequencer revenue into a DAO-governed treasury** is a proven, scalable strategy for sustaining decentralized ecosystems:
 
 - **Ronin Network**  
   Routes EIP-1559 `BASEFEE` to a DAO-controlled treasury supporting Axie Infinity infrastructure.
 
 - **Celo (Layer 1)**  
-  Redirects gas fees to a Gas Fee Handler for climate and community funding.
+  Redirects gas fees to a Gas Fee Handler for climate initiatives and community funding.
 
 - **Mantle (Layer 2)**  
   Uses sequencer revenue redirection to support ecosystem grants via MantleDAO.
 
-These precedents show that **protocol-native treasury funding** is a practical, scalable strategy for sustaining decentralized ecosystems.
+- **Polygon CDK (Modular Rollup Framework)**  
+  Integrates EIP-1559-compatible treasury redirection for sovereign rollups, enabling rollup creators to govern and fund upgrades.
+
+- **OP Stack (used by Base, Optimism)**  
+  Supports sequencer revenue sharing with governance control; while not always redirecting `BASEFEE`, it enables fee-split mechanisms for public goods funding.
+
+- **Arbitrum (Layer 2)**  
+  Routes sequencer revenue to a DAO-managed treasury, with disbursements governed by the Arbitrum Improvement Proposal (AIP) process.
+
+- **Optimism (Layer 2)**  
+  Allocates sequencer revenue to Retroactive Public Goods Funding (RPGF), rewarding impactful ecosystem contributions.
+
+- **zkSync Era & Scroll (Layer 2)**  
+  Incorporate sequencer revenue hooks to fund development incentives and ecosystem growth.
+
+- **Avalanche Subnets**  
+  Some subnets implement fee-to-treasury mechanisms governed by subnet validators, directing network revenue toward maintenance and growth.
+
+These precedents validate the neutrality, feasibility, and long-term sustainability of protocol-native treasury funding. Redirecting endogenous protocol revenue to transparent, on-chain treasuries aligns economic incentives between users, operators, and developers — while eliminating reliance on inflationary subsidies or centralized donors.
 
 #### Summary
 
@@ -271,7 +289,7 @@ The Olympia Treasury design builds on proven patterns from other EVM-compatible 
 
 - **Celo (Layer 1)**  
   Uses a `Gas Fee Handler` to redirect transaction fees toward climate initiatives and community development via a governance-controlled treasury.  
-  [View Govenance and Treasury Contracts](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972#code)
+  [View Governance and Treasury Contracts](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972#code)
 
 - **Mantle (Layer 2)**  
   Implements fee redirection from its L2 sequencer to a treasury contract managed by MantleDAO. Revenue supports grants, infrastructure, and developer programs.  
@@ -282,13 +300,31 @@ The Olympia Treasury design builds on proven patterns from other EVM-compatible 
   [Polygon CDK Overview](https://docs.polygon.technology/)
 
 - **OP Stack (used by Base, Optimism)**  
-  The OP Stack supports EIP-1559-style transactions and sequencer revenue splitting, but does not redirect `BASEFEE` to a DAO treasury. This provides a useful counterexample for evaluating the neutrality and sustainability of treasury design decisions across rollup architectures.
+  Supports EIP-1559-style transactions and sequencer revenue splitting, enabling fee-share models for public goods funding. While not always redirecting `BASEFEE`, it establishes governance patterns applicable to treasury design.
 
-These implementations reflect a broader trend: **redirecting protocol revenue to transparent, on-chain treasuries is an effective, neutral, and incentive-aligned strategy** for funding ecosystem development without introducing inflation or centralized control.
+- **Arbitrum (Layer 2)**  
+  Routes sequencer revenue into a DAO-managed treasury, with allocations decided through the Arbitrum Improvement Proposal (AIP) process.  
+  [Learn More](https://docs.arbitrum.foundation/dao-governance)
+
+- **Optimism (Layer 2)**  
+  Uses sequencer revenue to fund Retroactive Public Goods Funding (RPGF) rounds, rewarding high-impact ecosystem contributions.  
+  [RPGF Overview](https://community.optimism.io/docs/governance/)
+
+- **zkSync Era & Scroll (Layer 2)**  
+  Integrate sequencer revenue hooks into protocol design to fund ecosystem growth, development incentives, and infrastructure.
+
+- **Avalanche Subnets**  
+  Some subnets implement validator-governed fee-to-treasury mechanisms, routing network revenue to community-controlled funds.
+
+- **Gitcoin DAO**  
+  Specializes in funding open-source software and digital public goods through quadratic funding and direct grants. While not funded via `BASEFEE` capture, it provides a widely recognized governance and distribution framework for transparent, community-driven grant allocation.  
+  [Gitcoin DAO](https://gitcoin.co/)
+
+These implementations reflect a broader trend: **redirecting protocol revenue to transparent, on-chain treasuries is an effective, neutral, and incentive-aligned strategy** for funding ecosystem development without introducing inflation or centralized control. The diversity of approaches — from BASEFEE capture to sequencer fee allocation — demonstrates both the flexibility and the sustainability of this model across different network architectures.
 
 #### Addendum: Verified Contract References
 
-For deeper implementation study and validation, below are verified contracts used by other EVM ecosystems:
+For deeper implementation study and validation, below are verified contracts and governance documentation used by other EVM ecosystems:
 
 - **Ronin Treasury Contract**  
   [`0x22ce...694e`](https://explorer.roninchain.com/address/0x22cefc91e9b7c0f3890ebf9527ea89053490694e)
@@ -297,12 +333,30 @@ For deeper implementation study and validation, below are verified contracts use
   [`0x471E...8438`](https://celoscan.io/address/0xd533ca259b330c7a88f74e000a3faea2d63b7972#code)
 
 - **Mantle Fee Mechanism**  
-  [https://docs.mantle.xyz/network/system-information/fee-mechanism](https://docs.mantle.xyz/network/system-information/fee-mechanism)
+  [Mantle Docs](https://docs.mantle.xyz/network/system-information/fee-mechanism)
 
 - **Polygon CDK (Modular Rollup Framework)**  
-  [https://docs.polygon.technology/](https://docs.polygon.technology/)
+  [Polygon CDK Overview](https://docs.polygon.technology/)
 
-These implementations support the validity, neutrality, and resilience of redirecting protocol-layer fees to transparent, on-chain treasuries.
+- **OP Stack (Base / Optimism) Sequencer Revenue Sharing**  
+  [Optimism Docs](https://community.optimism.io/docs/governance/) — Governance and treasury design reference.
+
+- **Arbitrum DAO Treasury Governance**  
+  [Arbitrum Foundation DAO Governance](https://docs.arbitrum.foundation/dao-governance)
+
+- **Optimism Retroactive Public Goods Funding (RPGF)**  
+  [RPGF Overview](https://community.optimism.io/docs/governance/)
+
+- **Gitcoin DAO Grants & Quadratic Funding**  
+  [Gitcoin DAO](https://gitcoin.co/) — Treasury-funded public goods distribution system.
+
+- **Avalanche Subnet Validator-Governed Treasury Examples**  
+  [Avalanche Subnet Docs](https://docs.avax.network/subnets) — Fee-to-treasury implementations.
+
+- **zkSync Era & Scroll Sequencer Revenue Hooks**  
+  [zkSync Docs](https://era.zksync.io/docs/) | [Scroll Docs](https://docs.scroll.io/) — Protocol-integrated funding flows.
+
+These implementations support the validity, neutrality, and resilience of redirecting protocol-layer fees to transparent, on-chain treasuries, and provide governance and distribution models applicable to Ethereum Classic’s Olympia Treasury design.
 
 ### Implementation
 
