--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -197,6 +197,52 @@ These dependencies ensure that treasury control is never transferred without ful
 
 By decoupling protocol upgrades from governance deployment, Ethereum Classic ensures a **safe, incremental path** to full treasury activation — one that preserves user confidence while enabling sustainable funding infrastructure.
 
+### Implementation
+
+The Olympia upgrade requires a **coordinated hard fork**, as it introduces non-backward-compatible changes to Ethereum Classic’s transaction format and EVM behavior. Specifically, it activates:
+
+- [EIP-1559](https://eips.ethereum.org/EIPS/eip-1559): Dynamic fee market  
+- [EIP-3198](https://eips.ethereum.org/EIPS/eip-3198): `BASEFEE` opcode
+
+#### Client Support
+
+The following client currently supports Ethereum Classic and includes stable implementations of the above EIPs:
+
+- **[Core-Geth](https://github.com/ethereumclassic/core-geth)**  
+  Maintained by the Ethereum Classic community, Core-Geth will serve as the **reference implementation** for the Olympia upgrade.
+
+Client teams MUST implement:
+- Correct fee market behavior and basefee targeting logic (per EIP-1559)
+- Support for legacy and EIP-1559 transaction types
+- Accurate `BASEFEE` opcode return values
+- Consensus-layer `BASEFEE` redirection to the deterministic Olympia Treasury address defined in [ECIP-1112](https://ecips.ethereumclassic.org/ECIPs/ecip-1112)
+- Replay protection between legacy and upgraded chains
+
+#### Testing and Coordination
+
+Validation MUST occur on the **Mordor Testnet** prior to mainnet activation. Testing SHOULD include:
+- Full transaction lifecycle (legacy and type-2)
+- Gas accounting for `BASEFEE` and miner tip separation
+- `BASEFEE` opcode execution under various block conditions
+- Fork ID and chain replay protection validation
+
+Mainnet and testnet **activation block heights** SHALL be finalized through coordination between client developers, node operators, exchanges, miners, and infrastructure providers. Official release builds MUST include embedded fork activation logic.
+
+#### Scope of This ECIP
+
+This ECIP strictly introduces the **on-chain redirection of BASEFEE** and the activation of EVM changes defined in EIP-1559 and EIP-3198.
+
+Implementation of:
+- [Olympia Treasury](https://ecips.ethereumclassic.org/ECIPs/ecip-1112)
+- [Olympia DAO governance](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)
+- [Ethereum Classic Funding Proposal Process](https://ecips.ethereumclassic.org/ECIPs/ecip-1114)
+
+...is defined in separate proposals and may proceed **independently**.
+
+This modular structure enables safe, phased deployment of protocol upgrades without dependency on governance infrastructure readiness.
+
+Coordination with client teams, including maintainers of Core-Geth, will be required to ensure timely implementation of the Olympia upgrade. If necessary, third-party contributors or ecosystem developers may be enlisted to complete client-side changes, formalize testnet deployments, and validate consensus behavior. This open coordination model ensures the upgrade remains technically feasible and community-driven.
+
 ### Reference Implementation
 
 The Olympia upgrade will be implemented and tested in the following client:
