--- a/_specs/ecip-1111.md
+++ b/_specs/ecip-1111.md
@@ -197,74 +197,42 @@ These dependencies ensure that treasury control is never transferred without ful
 
 By decoupling protocol upgrades from governance deployment, Ethereum Classic ensures a **safe, incremental path** to full treasury activation — one that preserves user confidence while enabling sustainable funding infrastructure.
 
-### Implementation
+### Implementation & Reference Client
 
 The Olympia upgrade requires a **coordinated hard fork**, as it introduces non-backward-compatible changes to Ethereum Classic’s transaction format and EVM behavior. Specifically, it activates:
 
-- [EIP-1559](https://eips.ethereum.org/EIPS/eip-1559): Dynamic fee market  
-- [EIP-3198](https://eips.ethereum.org/EIPS/eip-3198): `BASEFEE` opcode
+- [EIP-1559](https://eips.ethereum.org/EIPS/eip-1559) — Dynamic fee market with consensus-layer BASEFEE redirection to the Olympia Treasury (ECIP-1112)  
+- [EIP-3198](https://eips.ethereum.org/EIPS/eip-3198) — `BASEFEE` opcode for contract-level gas visibility
 
-#### Client Support
+#### Reference Client
 
-The following client currently supports Ethereum Classic and includes stable implementations of the above EIPs:
+- **[Core-Geth](https://github.com/ethereumclassic/core-geth)** will serve as the reference implementation for the Olympia upgrade.  
+  Maintained by the Ethereum Classic community, Core-Geth implements:
+  - EIP-1559 (dynamic base fee and transaction type 2)
+  - EIP-3198 (`BASEFEE` opcode)
+  - Consensus-layer BASEFEE redirection to the immutable Olympia Treasury (ECIP-1112), accessible only to the authorized DAO executor (ECIP-1113) for disbursements approved via the Ethereum Classic Funding Proposal Process (ECIP-1114)  
+  These features are available under the `olympia-upgrade` branch.
 
-- **[Core-Geth](https://github.com/ethereumclassic/core-geth)**  
-  Maintained by the Ethereum Classic community, Core-Geth will serve as the **reference implementation** for the Olympia upgrade.
+#### Client Requirements
 
-Client teams MUST implement:
+All ETC client teams MUST implement:
 - Correct fee market behavior and basefee targeting logic (per EIP-1559)
-- Support for legacy and EIP-1559 transaction types
+- Support for both legacy and EIP-1559 transaction types
 - Accurate `BASEFEE` opcode return values
-- Consensus-layer `BASEFEE` redirection to the deterministic Olympia Treasury address defined in [ECIP-1112](https://ecips.ethereumclassic.org/ECIPs/ecip-1112)
+- Consensus-layer BASEFEE redirection to the deterministic Olympia Treasury address defined in ECIP-1112
 - Replay protection between legacy and upgraded chains
 
 #### Testing and Coordination
 
-Validation MUST occur on the **Mordor Testnet** prior to mainnet activation. Testing SHOULD include:
+Validation MUST occur on the **Mordor Testnet** before mainnet activation. Testing SHOULD include:
 - Full transaction lifecycle (legacy and type-2)
-- Gas accounting for `BASEFEE` and miner tip separation
+- Gas accounting for BASEFEE and miner tip separation
 - `BASEFEE` opcode execution under various block conditions
-- Fork ID and chain replay protection validation
+- Accurate BASEFEE redirection to the treasury at the consensus layer
+- Fork ID and replay protection validation
+- Integration testing with governance and funding process contracts from ECIPs 1113 and 1114
 
 Mainnet and testnet **activation block heights** SHALL be finalized through coordination between client developers, node operators, exchanges, miners, and infrastructure providers. Official release builds MUST include embedded fork activation logic.
-
-#### Scope of This ECIP
-
-This ECIP strictly introduces the **on-chain redirection of BASEFEE** and the activation of EVM changes defined in EIP-1559 and EIP-3198.
-
-Implementation of:
-- [Olympia Treasury](https://ecips.ethereumclassic.org/ECIPs/ecip-1112)
-- [Olympia DAO governance](https://ecips.ethereumclassic.org/ECIPs/ecip-1113)
-- [Ethereum Classic Funding Proposal Process](https://ecips.ethereumclassic.org/ECIPs/ecip-1114)
-
-...is defined in separate proposals and may proceed **independently**.
-
-This modular structure enables safe, phased deployment of protocol upgrades without dependency on governance infrastructure readiness.
-
-Coordination with client teams, including maintainers of Core-Geth, will be required to ensure timely implementation of the Olympia upgrade. If necessary, third-party contributors or ecosystem developers may be enlisted to complete client-side changes, formalize testnet deployments, and validate consensus behavior. This open coordination model ensures the upgrade remains technically feasible and community-driven.
-
-### Reference Implementation
-
-The Olympia upgrade will be implemented and tested in the following client:
-
-- **Reference Client:** [Core-Geth](https://github.com/ethereumclassic/core-geth)
-
-Core-Geth includes support for:
-- **EIP-1559** (dynamic base fee and transaction type 2)
-- **EIP-3198** (`BASEFEE` opcode)
-- **Consensus-layer BASEFEE redirection** to the immutable Olympia Treasury (ECIP-1112), accessible only to the authorized DAO executor (ECIP-1113) for disbursements approved via the Ethereum Classic Funding Proposal Process (ECIP-1114)
-
-These features are available under the `olympia-upgrade` branch.
-
-#### Testnet Validation
-
-- Deployment will first occur on the **Mordor Testnet**, enabling community testing and validation.
-- Testnet results will inform finalization of mainnet activation parameters, including fork block height and client release tags.
-- Validation will include:
-  - Accurate BASEFEE redirection to the treasury at the consensus layer
-  - Proper operation of EIP-1559 transaction type 2 and legacy transaction compatibility
-  - Correct return values for the `BASEFEE` opcode
-  - Eventual integration testing with governance and funding process contracts from ECIPs 1113 and 1114
 
 #### Scope of This ECIP
 
@@ -276,6 +244,8 @@ Implementation of:
 - [ECIP-1114](https://ecips.ethereumclassic.org/ECIPs/ecip-1114) — Ethereum Classic Funding Proposal Process
 
 ...is defined in those proposals and may be deployed independently in a phased rollout, consistent with the Modular Activation model.
+
+Coordination with client teams, including maintainers of Core-Geth, will be required to ensure timely implementation. Third-party contributors or ecosystem developers may be enlisted to complete client-side changes, formalize testnet deployments, and validate consensus behavior.
 
 ### EIP Compatibility Scope
 
